chore: Update .gitignore to exclude Next.js build files and cache

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
 # Dependencies
 node_modules/
 
+# Next.js
+.next/
+out/
+build/
+dist/
+
 # Environment
 .env
 .env.local
@@ -22,3 +28,7 @@ Thumbs.db
 # Logs
 *.log
 npm-debug.log*
+
+# TypeScript
+*.tsbuildinfo
+next-env.d.ts
