Fix analyze endpoint: reorder exports and add Vercel config
- Move POST handler to be exported first (before other methods)
- Add specific Vercel function config for analyze endpoint
- Ensure POST is properly recognized by Next.js/Vercel

--- a/vercel.json
+++ b/vercel.json
@@ -13,6 +13,10 @@
     "app/api/external/jobs/**/analysis/route.js": {
       "memory": 1024,
       "maxDuration": 300
+    },
+    "app/api/datasets/**/analyze/route.js": {
+      "memory": 1024,
+      "maxDuration": 300
     }
   },
   "headers": [
